--- a/sonatus/CMakeLists.txt
+++ b/sonatus/CMakeLists.txt
@@ -6,6 +6,7 @@ project(SONATUS)
 
 set(LIBIPC_SOURCES
     "./libIpc/src/IpcController.cpp"
+    "./libIpc/src/IpcMessage.cpp"
 )
 
 add_library(Ipc SHARED ${LIBIPC_SOURCES})
@@ -14,20 +15,14 @@ target_include_directories(Ipc PRIVATE "./libIpc/inc")
 
 
 
-
 #
 # Server
 #
-
-# set(SERVER_HEADERS
-#     "./include/"
-# )
 
 set(SERVER_SOURCES
     "./server/src/main.cpp"
 )
 
-# add_executable(Server ${MAIN_HEADERS} ${MAIN_SOURCES})
 add_executable(Server ${SERVER_SOURCES})
 
 target_include_directories(Server PRIVATE "./libIpc/inc")
@@ -39,15 +34,10 @@ target_link_libraries(Server Ipc)
 # Client
 #
 
-# set(SERVER_HEADERS
-#     "./include/"
-# )
-
 set(CLIENT_SOURCES
     "./client/src/main.cpp"
 )
 
-# add_executable(Server ${MAIN_HEADERS} ${MAIN_SOURCES})
 add_executable(Client ${CLIENT_SOURCES})
 
 target_include_directories(Client PRIVATE "./libIpc/inc")
