--- a/sonatus/.vscode/settings.json
+++ b/sonatus/.vscode/settings.json
@@ -61,6 +61,8 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "deque": "cpp",
+        "regex": "cpp"
     }
 }
